Enhanced GetAllEvents() and added comments for further improvement in bug 262620: GetAllEvents() is slow